# learningDS

./: README.md  pyproject.toml
NBA Trends/: script.py
Reggie's Linear Regression/: Reggie_Linear_Regression_Skeleton.ipynb  Reggie_Linear_Regression_Solution.ipynb
SoftEngForDS/: Informational.org
Transformations/: bins_categorical.py  bins_continous.py  script.py
algebra/: division.ipynb
assQuantCatego/: script.py  titanic.py
assTwoCatego/: script.py
assTwoQuant/: script.py
barCharts/: heroes_information.csv  plot.py  plot.py.ipynb  plot2.py.ipynb  plot3.py.ipynb  school_data.csv
boxplots/: data.py  music_data.py  script.py
calculus/: 3-calculus-i.ipynb  4-calculus-ii.ipynb  regression-in-pytorch.ipynb  single-point-regression-gradient.ipynb
categorical/: film_permits.csv  nyc_tree_census.csv  script.py  solutions.py  summary.txt
censusVariables/: census_data.csv  script.py
chatGPTPython/: chatgpt.ipynb  openai.md
coded_correspondence/: coded_correspondence.ipynb  coded_correspondence_solutions.ipynb
copilot/: guide_to_copilot_introduction.org
dataAcquisition/: api_request.py  script.py
dataWranglingAndTidying/: multipleImputation.ipynb  stackOverflowSurveyTrends.ipynb  tidyingData.ipynb
describeH/: cp.csv  script.py  summary.txt
dictionaries/: script.py
distributions/: script.py  transactions.csv
examGrade/: scrip.py  summary.txt
exploStudData/: script.py
exploreByVisual/: Airline Analysis.ipynb  Airline Analysis_Solution.ipynb  best_practices_berkeley.ipynb  c8af01db-4705-4e7f-b070-46f14659d4ed.ipynb  exploreByVis.ipynb  (+5 more)
(+284 files in other folders)
