[tool.poetry]
name = "learningds"
version = "0.1.0"
description = ""
authors = ["oldoc63 <leopoldo.olmos@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.24.3"
pandas = "^2.0.1"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
sympy = "^1.11.1"
scikit-learn = "^1.2.2"
notebook = "^6.5.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
